--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravelcollective/html": "5.2.*",
         "stripe/stripe-php": "3.*",
         "laravel/socialite": "^2.0",
-        "guzzlehttp/guzzle": "4.0"
+        "guzzlehttp/guzzle": "4.0",
+        "google/recaptcha": "~1.1"
+        
         
     },
     "require-dev": {
