--- a/composer.json
+++ b/composer.json
@@ -5,23 +5,23 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "gloudemans/shoppingcart": "^2.1",
-        "laravelcollective/html": "5.2.*",
-        "stripe/stripe-php": "3.*",
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
+        "gloudemans/shoppingcart": "^2.2",
+        "laravelcollective/html": "^5.3",
         "laravel/socialite": "^2.0",
-        "guzzlehttp/guzzle": "4.0",
-        "google/recaptcha": "~1.1"
-        
-        
+        "stripe/stripe-php": "^3.21",
+        "guzzlehttp/guzzle": "^6.2",
+        "google/recaptcha": "^1.1",
+        "laravel/scout": "^1.1",
+        "algolia/algoliasearch-client-php": "^1.10"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "phpunit/phpunit": "~5.0",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
         "classmap": [
@@ -38,7 +38,7 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
