--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.2",
         "google/recaptcha": "^1.1",
         "laravel/scout": "^1.1",
-        "algolia/algoliasearch-client-php": "^1.10"
+        "algolia/algoliasearch-client-php": "^1.10",
+        "laravel/cashier-braintree": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
